syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.sebastianDev";
option java_outer_classname = "ReservationGrpcProto";

package availability;

import "google/protobuf/timestamp.proto";

service AvailabilityService {
  rpc checkAvailabilityAndOccupy(CheckAvailabilityRequest) returns (CheckAvailabilityResponse);
  rpc cancelReservation(CancelReservationRequest) returns (CancelReservationResponse); // Novo m√©todo
}

message CheckAvailabilityRequest {
  string booking_id = 1;
  string user_id = 2;
  string room_id = 3;
  google.protobuf.Timestamp check_in_date = 4;
  google.protobuf.Timestamp check_out_date = 5;
}

message CheckAvailabilityResponse {
  bool is_available = 1;
  string message = 2;
}
message CancelReservationRequest {
  string room_id = 1;
  string booking_id = 2;
}

message CancelReservationResponse {
  bool success = 1;
  string message = 2;
}
